@@ -1,5 +1,15 @@
 2001-10-21  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&am_print_error): Set $exit_status since all your
+	users do.
+	(&am_error, &am_file_error, &am_line_error, &am_conf_error):
+	Don't.
+	(&am_conf_line_error, &am_conf_line_warning): Remove.
+	Adjust callers to use &am_file_error and...
+	(&am_file_warning): new.
+
+2001-10-21  Akim Demaille  <akim@epita.fr>
+
 	* m4/regex.m4: Use AC_LIBOBJ.
 	Require 2.50, and use AC_LIBSOURCES freely.
 	* tests/asm.tests: Formatting changes.
